--- a/css/timer.css
+++ b/css/timer.css
@@ -141,21 +141,21 @@ p{
   float: left;
 }
 
-div.inline { 
-  display: inline-block; 
-  line-height: 1; 
-  padding: 20px; 
+div.inline {
+  display: inline-block;
+  line-height: 1;
+  padding: 20px;
 }
 
 div .days, .hours, .minutes, .seconds {
-  font-size: 40px; 
-  font-weight: 700; 
-  color: #f33; 
+  font-size: 40px;
+  font-weight: 700;
+  color: #f33;
 }
 
 div .timedirection {
-  font-size: 40px; 
-  font-weight: 300; 
+  font-size: 40px;
+  font-weight: 300;
   color: #000;
 }
 span.timedirection {
@@ -176,3 +176,15 @@ footer {
   background-color: #c0c0c0;
 }
 
+.footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+height: 60px; /* Set the fixed height of the footer here */
+line-height: 60px; /* Vertically center the text there */
+background-color: #c0c0c0;
+}
+
+.footer img {
+  vertical-align: unset;
+}
