--- a/css/timer.css
+++ b/css/timer.css
@@ -188,3 +188,84 @@ background-color: #c0c0c0;
 .footer img {
   vertical-align: unset;
 }
+
+#previewcontainer {
+height: 600px;
+width: 100%;
+}
+#previewimage {
+z-index: 1;
+width: 400px;
+margin: 0 auto;
+}
+#previewtimer {
+z-index: 2;
+position: absolute;
+width: 100%;
+bottom: 20px;
+left: 0px;
+text-align: center;
+font-size: 40px;
+font-weight: 700;
+color: #f33;
+}
+
+div .timedirection {
+  font-size: 40px;
+  font-weight: 300;
+  color: #000;
+}
+span.timedirection {
+  letter-spacing: 2px;
+  margin: 0 5px;
+}
+
+span {
+  display: block;
+  font-size: 20px;
+  color: #c0c0c0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #c0c0c0;
+}
+
+.footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+height: 60px; /* Set the fixed height of the footer here */
+line-height: 60px; /* Vertically center the text there */
+background-color: #c0c0c0;
+}
+
+.footer img {
+  vertical-align: unset;
+}
+
+#previewcontainer {
+height: 600px;
+width: 100%;
+}
+#previewimage {
+z-index: 1;
+width: 400px;
+margin: 0 auto;
+}
+#previewtimer {
+z-index: 2;
+position: absolute;
+width: 100%;
+bottom: 20px;
+left: 0px;
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+color: #000;
+}
+#memeTextFmt {
+width:100%;
+}
